- Controller   * added new logic control in restore_device_status method     to know what happend with a printer in a workstation
- Helper
  * added new method 'continue_as_part_of_this_workstation'
    to show a check box

- Partial
  * added some new tags

- View
  * refactoring

--- a/app/views/workstations/_detailed_info_of_workstation.html.erb
+++ b/app/views/workstations/_detailed_info_of_workstation.html.erb
@@ -29,6 +29,11 @@
           @workstation.printer_id, 'description_model')  rescue nil %>
       <%= show_info('Sn', 'data-principal-device', 'Printer', @workstation.printer_id,
           'serialnumber')  rescue nil %>
+
+      <%= continue_as_part_of_this_workstation() unless
+           @workstation.printer_id.nil? %>
+
+      <%= hidden_field(:device, :still_there, :value => 'yes') if @workstation.printer_id.nil? %>
     </td>
   </tr>
 </table>
