--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -4,7 +4,7 @@
 <%= f.error_messages %>
 
   <% content_tag :p do %>
-    <%= f.label :name %><br />
+    <%= t("pages.name_page") %><br />
     <%= f.text_field :name, :focus => true  %>
   <% end %>
 
@@ -14,13 +14,13 @@
   <% end %>
 
   <% content_tag :p do %>
-    <%= f.label :content %><br />
+    <%= t("pages.content_page") %><br />
     <%= fckeditor_textarea("page", "content", :toolbarSet => 'Easy', :width => '100%', :height => '200px') %>
     <%#= f.text_area :content, :cols => 80, :rows => 15 %>
   <% end %>
 
   <% content_tag :p do %>
-      <%= f.label :frontend %><br />
+      <%= t("pages.front_end?") %><br />
       <%= f.check_box :frontend %>
   <% end %>
 
