--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -6,9 +6,14 @@
   <meta name="description" content="" />
   <%= stylesheet_link_tag 'scaffold' %>
   <%= stylesheet_link_tag 'default' %>
+  <%= stylesheet_link_tag 'blue_sorter' %>
 
+  <%= javascript_include_tag('jquery-1.3.2.js') %>
+  <%= javascript_include_tag('jquery.tablesorter.min.js') %>
   <%= javascript_include_tag('swfobject') %>
   <%= javascript_include_tag('prototype') %>
   <%= javascript_include_tag('scriptaculous/src/scriptaculous') %>
+
+
 </head>
 <% end %>
