--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -1,4 +1,6 @@
-<% content_tag :table do %>
+<% content_tag :table, :id => 'computers', :class => 'tablesorter',
+:border => '0', :cellpadding => '0', :cellspacing => '1' do %>
+<thead>
   <% content_tag :tr do %>
     <%= content_tag('th', 'Pc') %>
     <%= content_tag('th', 'Mac') %>
@@ -14,6 +16,8 @@
     <%= content_tag('th', t('computers.bill')) %>
     <%= content_tag('th', t('common_actions.actions'), options = {:colspan => 3}) %>
   <% end -%>
+</thead>
+<tbody>
   <% for computer in @computers %>
     <tr  class="<%= cycle("rowA","rowB") %>">
       <%= content_tag('td', computer.name, options = {:nowrap => true}) %>
@@ -49,4 +53,12 @@
 
     </tr>
   <% end %>
+</tbody>
 <% end %>
+
+<script type="text/javascript" charset="utf-8">
+  jQuery(document).ready(function()
+  {
+  jQuery("#computers").tablesorter();
+  });
+</script>
