- Model   * deleted validations presence of 'serialnumber'
- Partial
  * little changes to show an '-' instead nothing if
    there is not any data serial number

--- a/app/views/memories/_list.html.erb
+++ b/app/views/memories/_list.html.erb
@@ -10,7 +10,7 @@
   <% end -%>
 <% for memory in @memories %>
   <tr  class="<%= cycle("rowA","rowB") %>">
-    <%= content_tag('td', memory.serialnumber, options = {:nowrap => true}) %>
+    <%= content_tag('td', memory.serialnumber.empty? ? '-' : memory.serialnumber, options = {:nowrap => true}) %>
     <%= content_tag('td', memory.model_id.nil? ? '-' : memory.description_model, options = {:nowrap => true}) %>
     <%= content_tag('td', memory.size, options = {:nowrap => true}) %>
     <%= content_tag('td', memory.unit.to_s, options = {:nowrap => true}) %>
