- Partial   * added order to list of places in form for computers

--- a/app/views/computers/_form.html.erb
+++ b/app/views/computers/_form.html.erb
@@ -57,7 +57,7 @@
 
   <% if not @computer.is_part_of_a_workstation %>
   <div id="quarter" >
-    <%= collection_select 'computer', 'place_id', Place.find(:all), 'id', 'title',
+    <%= collection_select 'computer', 'place_id', Place.find(:all, :select => 'id, title', :order => 'title ASC'), 'id', 'title',
     {:prompt => true}, :tabindex => '7' %>
   </div>
   <% end %>
