- Partials   * added order in list of places inside of forms

--- a/app/views/printers/_form.html.erb
+++ b/app/views/printers/_form.html.erb
@@ -57,7 +57,7 @@
   <%= t('menu.places') %>
   <% if not @printer.is_part_of_a_workstation %>
   <div id="quarter" >
-    <%= collection_select 'printer', 'place_id', Place.find(:all), 'id', 'title',
+    <%= collection_select 'printer', 'place_id', Place.find(:all, :select => 'id, title', :order => 'title ASC'), 'id', 'title',
         {:prompt => true} %>
   </div>
   <% end %>
