--- a/app/views/screens/_form.html.erb
+++ b/app/views/screens/_form.html.erb
@@ -58,7 +58,7 @@ t('help_phrases.in_workstation'),'quarter', 'screen')%>
   <%= t('menu.places') %>
   <% if not @screen.is_part_of_a_workstation %>
   <div id="quarter" >
-    <%= collection_select 'screen', 'place_id', Place.find(:all), 'id', 'title',
+    <%= collection_select 'screen', 'place_id', Place.find(:all, :select => 'id, title', :order => 'title ASC'), 'id', 'title',
         {:prompt => true} %>
   </div>
   <% end %>
