--- a/app/views/mother_boards/_form.html.erb
+++ b/app/views/mother_boards/_form.html.erb
@@ -41,7 +41,7 @@
 
   <%= t('motherboards.mark') %>
   <div id="quarter" >
-  <%= collection_select 'mother_board', 'mark_id', Mark.find(:all), 'id', 'name',
+  <%= collection_select 'mother_board', 'mark_id', Mark.find(:all, :select => 'id, name', :order => 'name ASC'), 'id', 'name',
       {:prompt => true} %>
   </div>
 
