- Partial   * fixed bug where was showin 'Serial Number' label instead     of 'Mark'

--- a/app/views/printers/_form.html.erb
+++ b/app/views/printers/_form.html.erb
@@ -32,7 +32,7 @@
   <% end %>
 
 
-  <%= t('printers.sn') %>
+  <%= t('printers.mark') %>
   <div id="quarter" >
     <%= collection_select 'printer', 'mark_id', Mark.find(:all, :select => 'id, name', :order => 'name ASC'), 'id', 'name',
         {:prompt => true} %>
