- View   * added will_paginate links

--- a/app/views/printers/index.html.erb
+++ b/app/views/printers/index.html.erb
@@ -8,6 +8,7 @@
 <br />
 <%= render :partial => 'list' %>
 
+<%= will_paginate @printers %>
 <br />
 
 <%= link_to t('common_actions.create'), new_printer_path %>
