--- a/app/views/screens/_search.html.erb
+++ b/app/views/screens/_search.html.erb
@@ -8,4 +8,12 @@
     <td><%= submit_tag   t 'search.label' %></td>
   </tr>
   <% end %>
+  <tr>
+    <% form_tag :action => 'search' do %>
+    <td><label><%= t('screens.inventory_register') %></label></td>
+    <td><%= text_field_with_auto_complete :screen, :inventory_register, {:size => 20}, {:method => :get} %></td>
+    <td><%= submit_tag   t 'search.label' %></td>
+  </tr>
+  <% end %>
+
 </table>
