- Controller   * added before filter to get auto complete in search     by 'inventory register' field of printers   * added logic to make search by 'inventory register' field     if exist a param with this value of search of printers
- Routes
  * added route for search by 'inventory register' field
     of printers

--- a/app/views/printers/_search.html.erb
+++ b/app/views/printers/_search.html.erb
@@ -8,4 +8,11 @@
     <td><%= submit_tag   t 'search.label' %></td>
   </tr>
   <% end %>
+<tr>
+    <% form_tag :action => 'search' do %>
+    <td><label><%= t('printers.inventory_register') %></label></td>
+    <td><%= text_field_with_auto_complete :printer, :inventory_register, {:size => 20}, {:method => :get} %></td>
+    <td><%= submit_tag   t 'search.label' %></td>
+  </tr>
+  <% end %>
 </table>
